mds finais adicionados